<?xml version="1.0"?>
<package format="2">
  <name>mbplanner</name>
  <version>0.0.0</version>
  <description>Motion primitive based planning algorithm</description>
  <maintainer email="mihir.dharmadhikari@gmail.com">Tung Dang</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_proc</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>planner_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>kdtree</depend>
  <depend>voxblox_ros</depend>
  <depend>octomap_world</depend>
  <depend>nav_msgs</depend>
  <depend>planner_common</depend>
  <depend>global_planner</depend>
  <depend>mbplanner_ui</depend>

</package>
